syntax = "proto3";

package parkingpb;
option go_package="parky/parkingpb";

service Authentication {

  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

// The request message containing the user's name.
message AuthenticateUserRequest {
  string username = 1;
}

// The response message containing the token
message AuthenticateUserResponse {
  string userId = 1;
}